sl-lsl/tests/corpus/error/undefined_variable.lsl
// References a name that resolves to no local, global or library constant.
default
{
    state_entry()
    {
        llSay(0, undefinedVariable);
    }
}
